<resources>
    <string name="app_name">LaptopWearableDemo</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="textview">TextView</string>
    <string name="upload">upload</string>
    <string name="delete">delete</string>
    <string name="button">Button</string>
    <string name="todo">TODO</string>
    <string name="HeartRate">Heart Rate</string>
    <string name="Accelerometer">Accelerometer "  "</string>
    <string name="Gyroscope">Gyroscope "  "</string>
    <string name="Light">Light "  "</string>
    <string name="Geomagnetic">Geomagnetic "  "</string>
    <string name="Capacitance">Capacitance "  "</string>
    <string name="Barometer">Barometer  "  "</string>
    <string name="SensorList">Sensor List </string>
    <string name="Enable">Enable</string>
    <string name="AccelerometerDisplay">Accelerometer</string>
    <string name="Button">Button</string>
    <string name="xAxis"></string>
    <string name="_0">0</string>
    <string name="_1">0</string>


</resources>
