<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fillViewport="true"
    tools:context=".MainActivity"
    tools:deviceIds="wear">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingBottom="80dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/HeartRate"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/HeartRate"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/HR"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/AccelerometerDisplay"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/xAxis"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/yAxis"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/zAxis"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/Gyroscope"
            android:layout_width="150dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/Gyroscope"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/X"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/Y"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/Z"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="75dp"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/start1" />

    </LinearLayout>

</ScrollView>